# pql-agent

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  scrape.ipynb
app/: feedback.py  streamlit_app.py
docs/: AGENTIC_RUNTIME.md  ARCHITECTURE.md  ARCHITECTURE_edits.md  CHAT_UI.md  CHUNKING_STRATEGY.md  DEPLOYMENT.md  ITERATION_WORKFLOW.md  LOGGING_AND_FEEDBACK.md  ROADMAP.md  V1_OVERVIEW.md  VECTOR_DB.MD
notebooks/: chroma_inspection.ipynb  chroma_query.ipynb  chunking_analysis.ipynb  corpus_analysis.ipynb
scripts/: answer.py  build_pql_docs_browser.py  chunk.py  embed.py  pipeline.py  retrieve.py  scrape_docs.py
src/pql_agent/: __init__.py  cli.py  config.py
src/pql_agent/ingestion/: __init__.py  chunk.py  pipeline.py  scrape.py
src/pql_agent/retrieval/: __init__.py  chroma.py  embeddings.py  retrieve.py  tools.py
src/pql_agent/runtime/: __init__.py  agent.py  logging.py  models.py  prompts.py  validation.py
tests/: test_agentic_runtime.py
